# Calculator3.0

./: App.axaml  App.axaml.cs  Calculator3.csproj  Program.cs  README.md  ViewLocator.cs
src/: App.axaml  App.axaml.cs  CMakeLists.txt  Calculator3 - Backup.csproj  Calculator3.0.sln  Calculator3.csproj  Makefile  app.manifest
src/Attributies/: AmountAttribute.cs  TermAttribute.cs
src/Calculator/: App.axaml.cs  CMakeLists.txt  Calculator3.csproj  Makefile  ViewLocator.cs
src/Calculator/Assets/: ButtonIcon.axaml
src/Calculator/Attributies/: RateAttribute.cs  TermAttribute.cs
src/Calculator/Constants/: Constants.cs
src/Calculator/Models/: IDataRequest.cs  ResponseCreditLine.cs  ResponseDepositLine.cs
src/Calculator/Services/: CreditCalculator.cs  DepositCalculator.cs
src/Calculator/ViewModels/: CalculatorViewModel.cs  (+4 more)
src/CalculatorTests/: CMakeLists.txt  CalculatorTests.csproj  Makefile  UnitTest1.cs
src/Constants/: Constants.cs
src/Converter/: FuncValueConverters.cs
src/Documentation/: index.html  script.js  style.css
src/Models/: ICalculator.cs  IDataRequest.cs  IDataResponse.cs  LibraryImport_x64.cs  Replenishment.cs
src/Services/: CreditCalculator.cs  DepositCalculator.cs
src/ViewModels/: CalculatorViewModel.cs  CreditViewModel.cs  DepositViewModel.cs  MainWindowViewModel.cs
src/Views/: CalculatorView.axaml  CalculatorView.axaml.cs  ChartsView.axaml  ChartsView.axaml.cs  CreditView.axaml  CreditView.axaml.cs  DepositView.axaml  DepositView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
src/package/: calculator3.desktop
(+58 files in other folders)
